--- a/SecureFiles/package.json
+++ b/SecureFiles/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "vsts-task-lib": "^2.0.5"
+    "vsts-task-lib": "^2.0.5",
+    "vso-node-api": "^6.2.8-preview"
   },
   "devDependencies": {
     "@types/node": "^8.0.7",
